--- a/source/USB Test App UWP/MainPage.xaml
+++ b/source/USB Test App UWP/MainPage.xaml
@@ -12,6 +12,7 @@
         <Button x:Name="pingButton" Content="Ping device" HorizontalAlignment="Left" Margin="82,149,0,0" VerticalAlignment="Top" Click="pingButton_Click"/>
         <Button x:Name="printMemoryMapButton" Content="Memory Map" HorizontalAlignment="Left" Margin="82,221,0,0" VerticalAlignment="Top" Click="printMemoryMapButton_Click" />
         <Button x:Name="printFlashSectorMapButton" Content="Flash Sector Map" HorizontalAlignment="Left" Margin="82,292,0,0" VerticalAlignment="Top" Click="printFlashSectorMapButton_Click" />
+        <Button x:Name="deployFileButton" Content="Deploy File" HorizontalAlignment="Left" Margin="82,367,0,0" VerticalAlignment="Top" Click="deployFileButton_Click" />
 
     </Grid>
 </Page>
